--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- <script src="first-assignment.js"></script> -->
     <!-- <script src="second-assignment.js"></script> -->
     <!-- <script src="third-assignment.js"></script> -->
-    <!-- <script src="four-assignment.js"></script> -->
+    <script src="four-assignment.js"></script>
     <!-- <script src="five-assignment.js"></script> -->
-    <script src="six-assignment.js"></script>
+    <!-- <script src="six-assignment.js"></script> -->
 </body>
 </html>
